# lttpoll.com

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  build-publish.sh  database.psql
assets/_scss/: index.scss  question.scss
assets/_scss/common/: _base.scss  _footer.scss  _header.scss  _message.scss
assets/css/: index.min.css  index.min.css.map  question.min.css  question.min.css.map
assets/js/: question.js
frontend/assets/_scss/: index.scss
frontend/assets/_scss/common/: _base.scss  _fonts.scss  _footer.scss  _header.scss  _message.scss  _vars.scss
frontend/assets/css/: index.min.css  index.min.css.map
frontend/assets/js/: index.js
src/: frontend.rs  main.rs  voter_id.rs
src/database/: mod.rs
templates/: base.html.tera  index.html.tera  question.html.tera
